# mandelbrotgl

./: .gitignore  CMakeLists.txt  README.md
app/: Main.cpp
include/: ControlCost.hpp  Myst.hpp  a2kext.h  a2kktx.h  cube.h  dispmap.hpp  draw.hpp  shader.h  vmath.h
media/shaders/cube/: cube.fs.glsl  cube.vs.glsl
media/shaders/floor/: floor.fs.glsl  floor.vs.glsl
media/shaders/tractor/: tractor.fs.glsl  tractor.vs.glsl
src/: ControlCost.cpp  a2kktx.cpp  a2kshader.cpp  dispmap.cpp  draw.cpp  gl3w.cpp
